# rdkservices

.github/workflows/: L2-PersistentStore-grpc.yml  unit-tests.yml
DeviceIdentification/: CMakeLists.txt  DeviceIdentification.cpp
DeviceProvisioning/: CHANGELOG.md  CMakeLists.txt  DeviceProvisioning.config  DeviceProvisioning.cpp  DeviceProvisioning.h  DeviceProvisioning.json  DeviceProvisioningPlugin.json  DeviceProvisioningPlugin.json.bak  README.md  socprov_datatype.h
DeviceProvisioning/doc/: DeviceProvisioningPlugin.md
EasterEgg/: CMakeLists.txt  EasterEgg.cpp  EasterEgg.h  EasterEgg.json  EasterEggPlugin.json  Module.h
EasterEgg/doc/: EasterEggPlugin.md
FrameRate/: FrameRate.cpp  FrameRate.cpp.bak
MaintenanceManager/: MaintenanceManager.cpp
Network/: NetworkConnectivity.cpp  NetworkConnectivity.h
PersistentStore/: CMakeLists.txt  PersistentStore.cpp  PersistentStore.h  PersistentStoreJsonRpc.cpp
SystemServices/: CMakeLists.txt  SystemServices.cpp  SystemServices.h  thermonitor.cpp
Tests/: CMakeLists.txt
Tests/tests/: test_SystemServicesTest.cpp
docs/api/: DataCapturePlugin.md  DeviceProvisioningPlugin.md  EasterEggPlugin.md  HdmiCecSourcePlugin.md  HdmiCec_2Plugin.md  NetworkPlugin.md
helpers/: UtilsIarm.h  UtilsThreadRAII.h  rfcapi.h
test/: CMakeLists.txt
test/headers/: dsConstant.hpp  libIARM.h  libIBus.h  mfrMgr.h  mfrTypes.h  pwrMgr.h  sleepMode.hpp  sysMgr.h  wdmp-c.h
test/tests/: SystemServicesTest.cpp
